# aoc-2024

./: .gitignore  README.md
day01/: CMakeLists.txt
day01/include/: string_extensions.h
day01/src/: main.cc  string_extensions.cc
template/: CMakeLists.txt
